// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`infiniteloading base 1`] = `
<div>
  <div
    class="nut-infiniteloading"
    iconclassprefix="nut-icon"
    iconfontclassname="nutui-iconfont"
  >
    <div
      class="nut-infinite-top"
      style="height: 0px; transition: height 0.2s cubic-bezier(0.25,0.1,0.25,1);"
    >
      <div
        class="top-box"
      >
        <img
          class="nut-icon__img top-img "
          src="https://img10.360buyimg.com/imagetools/jfs/t1/169863/6/4565/6306/60125948E7e92774e/40b3a0cf42852bcb.png"
        />
        <span
          class="top-text"
        >
          松开刷新
        </span>
      </div>
    </div>
    <div
      class="nut-infinite-container"
    />
    <div
      class="nut-infinite-bottom"
    />
  </div>
</div>
`;

exports[`pull base 1`] = `
<div>
  <div
    class="nut-infiniteloading"
    iconclassprefix="nut-icon"
    iconfontclassname="nutui-iconfont"
  >
    <div
      class="nut-infinite-top"
      style="height: 10px; transition: height 0.2s cubic-bezier(0.25,0.1,0.25,1);"
    >
      <div
        class="top-box"
      >
        <img
          class="nut-icon__img top-img "
          src="https://img10.360buyimg.com/imagetools/jfs/t1/169863/6/4565/6306/60125948E7e92774e/40b3a0cf42852bcb.png"
        />
        <span
          class="top-text"
        >
          松开刷新
        </span>
      </div>
    </div>
    <div
      class="nut-infinite-container"
    />
    <div
      class="nut-infinite-bottom"
    />
  </div>
</div>
`;

exports[`pull base 2`] = `
<div>
  <div
    class="nut-infiniteloading"
    iconclassprefix="nut-icon"
    iconfontclassname="nutui-iconfont"
  >
    <div
      class="nut-infinite-top"
      style="height: 10px; transition: height 0.2s cubic-bezier(0.25,0.1,0.25,1);"
    >
      <div
        class="top-box"
      >
        <img
          class="nut-icon__img top-img "
          src="https://img10.360buyimg.com/imagetools/jfs/t1/169863/6/4565/6306/60125948E7e92774e/40b3a0cf42852bcb.png"
        />
        <span
          class="top-text"
        >
          松开刷新
        </span>
      </div>
    </div>
    <div
      class="nut-infinite-container"
    />
    <div
      class="nut-infinite-bottom"
    />
  </div>
</div>
`;
